tests/ui/imports/shadow_builtin_macros.stderr
error[E0659]: `panic` is ambiguous
  --> $DIR/shadow_builtin_macros.rs:15:14
   |
LL |     fn f() { panic!(); }
   |              ^^^^^ ambiguous name
   |
   = note: ambiguous because of a conflict between a name from a glob import and an outer scope during import or macro resolution
   = note: `panic` could refer to a macro from prelude
note: `panic` could also refer to the macro imported here
  --> $DIR/shadow_builtin_macros.rs:14:9
   |
LL |     use foo::*;
   |         ^^^^^^
   = help: consider adding an explicit import of `panic` to disambiguate
   = help: or use `self::panic` to refer to this macro unambiguously

error[E0659]: `panic` is ambiguous
  --> $DIR/shadow_builtin_macros.rs:33:5
   |
LL |     panic!();
   |     ^^^^^ ambiguous name
   |
   = note: ambiguous because of a conflict between a macro-expanded name and a less macro-expanded name from outer scope during import or macro resolution
   = note: `panic` could refer to a macro from prelude
note: `panic` could also refer to the macro defined here
  --> $DIR/shadow_builtin_macros.rs:30:9
   |
LL |         macro_rules! panic { () => {} }
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LL |     } }
LL |     m!();
   |     ---- in this macro invocation
   = note: this error originates in the macro `m` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0659]: `n` is ambiguous
  --> $DIR/shadow_builtin_macros.rs:49:5
   |
LL |     n!();
   |     ^ ambiguous name
   |
   = note: ambiguous because of a conflict between a name from a glob import and an outer scope during import or macro resolution
note: `n` could refer to the macro imported here
  --> $DIR/shadow_builtin_macros.rs:48:9
   |
LL |     use bar::*;
   |         ^^^^^^
   = help: consider adding an explicit import of `n` to disambiguate
   = help: or use `self::n` to refer to this macro unambiguously
note: `n` could also refer to the macro imported here
  --> $DIR/shadow_builtin_macros.rs:36:13
   |
LL | #[macro_use(n)]
   |             ^

error[E0659]: `panic` is ambiguous
  --> $DIR/shadow_builtin_macros.rs:20:14
   |
LL |     fn f() { panic!(); }
   |              ^^^^^ ambiguous name
   |
   = note: ambiguous because of a conflict between a macro-expanded name and a less macro-expanded name from outer scope during import or macro resolution
   = note: `panic` could refer to a macro from prelude
note: `panic` could also refer to the macro imported here
  --> $DIR/shadow_builtin_macros.rs:19:26
   |
LL |     ::two_macros::m!(use foo::panic;);
   |                          ^^^^^^^^^^
   = help: use `self::panic` to refer to this macro unambiguously

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0659`.
